Basic API Structure.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.servlet.multipart.max-request-size=2GB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=${java.io.tmpdir}
-file.headers=TradeId,Spot,Strike,timeToMaturity,IR,Sigma,Option,timeTaken
+file.headers=TradeId,Spot,Strike,timeToMaturity,IR,Sigma,OptionPrice,timeTaken
 server.port=5080
