--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<node.version>v12.16.1</node.version>
-		<npm.version>6.14.9</npm.version>
+		<node.version>v18.15.0</node.version>
+		<npm.version>9.5.1</npm.version>
 	</properties>
 
 	<dependencies>
@@ -94,11 +94,12 @@
 							<goal>npm</goal>
 						</goals>
 						<configuration>
-							<argument>run build</argument>
+							<arguments>run build</arguments>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
+	<packaging>war</packaging>
 </project>
