--- a/src/main/root/package.json
+++ b/src/main/root/package.json
@@ -1,12 +1,49 @@
 {
+  "name": "bb-ux",
+  "version": "0.0.0",
+  "description": "Example project from an angular.io guide.",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --ssl true",
+    "build": "node ./node_modules/@angular/cli/bin/ng build --delete-output-path --output-path=../../../target/classes/static/",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test --source-map=false",
+    "e2e": "ng e2e",
+    "lint": "eslint . --ext .ts"
+  },
+  "private": true,
   "dependencies": {
-    "@angular/cdk": "^7.3.3",
-    "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/material": "^7.3.3",
-    "angular-web-storage": "^4.1.0",
-    "typescript": "^3.2.4"
+    "@angular/animations": "^15.2.0-rc.0",
+    "@angular/common": "^15.2.0-rc.0",
+    "@angular/compiler": "^15.2.0-rc.0",
+    "@angular/core": "^15.2.0-rc.0",
+    "@angular/forms": "^15.2.0-rc.0",
+    "@angular/platform-browser": "^15.2.0-rc.0",
+    "@angular/platform-browser-dynamic": "^15.2.0-rc.0",
+    "@angular/router": "^15.2.0-rc.0",
+    "angular-in-memory-web-api": "~0.15.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular/cli": "^7.3.5"
+    "@angular-devkit/build-angular": "^15.2.0-rc.0",
+    "@angular/cli": "^15.2.0-rc.0",
+    "@angular/compiler-cli": "^15.2.0-rc.0",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.35",
+    "copyfiles": "^2.4.1",
+    "jasmine-core": "~4.5.0",
+    "jasmine-marbles": "~0.9.2",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.9.0",
+    "typescript": "~4.9.3"
   }
 }
