--- a/src/main/root/package.json
+++ b/src/main/root/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0-rc.0",
     "@angular/router": "^15.2.0-rc.0",
     "angular-in-memory-web-api": "~0.15.0",
-    "@angular/material": "^15.2.0-rc.0",
+    "@angular/material": "^15.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
