--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.servlet.multipart.max-request-size=2GB
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=${java.io.tmpdir}
 file.headers=TradeId,Spot,Strike,timeToMaturity,IR,Sigma,OptionPrice,timeTaken
+file.name=instruments_50.csv
 server.port=5080
