Changes as per model.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.servlet.multipart.max-request-size=2GB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=${java.io.tmpdir}
-file.headers=TradeId,Spot,Strike,timeToMaturity,IR,Sigma,OptionPrice,timeTaken
+file.headers=ticker,spotPrice,strikePrice,expiry,volatility,optionPrice,predictedPrice,timeTaken
 file.name=instruments_50.csv
 server.port=5080
