Modifications to actual API simulation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.servlet.multipart.max-request-size=2GB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=${java.io.tmpdir}
-file.headers=ticker,spotPrice,strikePrice,expiry,volatility,optionPrice,predictedPrice,timeTaken
-file.name=instruments_50.csv
+file.headers=contractSymbol,expirationDate,lastPrice,spotPrice,strikePrice,ticker,volatility
+file.name=instruments_actual.csv
 server.port=5080
