Screen-1, Base structure.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.servlet.multipart.max-request-size=2GB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-spring.data.mongodb.uri=mongodb://21af924e8e2c.mylabserver.com:8080/admin
+spring.data.mongodb.uri=mongodb://21af924e8e2c.mylabserver.com:8080/
 spring.data.mongodb.database=TradeData
 file.upload-dir=${java.io.tmpdir}
 file.headers=contractSymbol,expirationDate,lastPrice,spotPrice,strikePrice,ticker,volatility
