--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<finalName>${project.artifactId}</finalName>
 	</build>
 	<packaging>war</packaging>
 </project>
